# chat-spx

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/chat_spx/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_core.py
