[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-spx"
version = "0.1.0"
description = "Close prices memorized in a transformer checkpoint"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Stephen Lihn" }
]
dependencies = [
    "torch>=2.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
chat-spx = "chat_spx.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7"
]

[project.urls]
Homepage = "https://github.com/slihn/chat-spx"
Repository = "https://github.com/slihn/chat-spx"
Issues = "https://github.com/slihn/chat-spx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chat_spx = ["data/*.pt", "py.typed"]
